[gd_scene load_steps=2 format=3 uid="uid://bl52kcnu841kx"]

[ext_resource type="Script" path="res://sound.gd" id="1_rfb3s"]

[node name="Sound" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfb3s")

[node name="Music" type="HSlider" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 320.0
offset_right = 950.0
offset_bottom = 404.0
min_value = -30.0
max_value = 0.0

[node name="TextEdit" type="TextEdit" parent="Music"]
layout_mode = 0
offset_left = 328.0
offset_right = 384.0
offset_bottom = 32.0
text = "Music"

[node name="Master" type="HSlider" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 88.0
offset_right = 950.0
offset_bottom = 172.0
min_value = -30.0
max_value = 0.0

[node name="TextEdit" type="TextEdit" parent="Master"]
layout_mode = 0
offset_left = 328.0
offset_right = 392.0
offset_bottom = 32.0
text = "Master"

[node name="SFX" type="HSlider" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 200.0
offset_right = 950.0
offset_bottom = 284.0
min_value = -30.0
max_value = 0.0

[node name="TextEdit" type="TextEdit" parent="SFX"]
layout_mode = 0
offset_left = 336.0
offset_right = 376.0
offset_bottom = 32.0
text = "SFX"

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 448.0
offset_right = 703.0
offset_bottom = 479.0
text = "Back"

[connection signal="value_changed" from="Music" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Master" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="SFX" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
